logs/dag_id=load_data_warehouse/run_id=manual__2025-03-12T14:13:58.419334+00:00/task_id=get_last_updated_date/attempt=2.log
[2025-03-12T14:27:31.926+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2025-03-12T14:27:31.957+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: load_data_warehouse.get_last_updated_date manual__2025-03-12T14:13:58.419334+00:00 [queued]>
[2025-03-12T14:27:31.972+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: load_data_warehouse.get_last_updated_date manual__2025-03-12T14:13:58.419334+00:00 [queued]>
[2025-03-12T14:27:31.972+0000] {taskinstance.py:2865} INFO - Starting attempt 2 of 2
[2025-03-12T14:27:31.994+0000] {taskinstance.py:2888} INFO - Executing <Task(PostgresOperator): get_last_updated_date> on 2025-03-12 14:13:58.419334+00:00
[2025-03-12T14:27:32.004+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70: DeprecationWarning: This process (pid=1695) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2025-03-12T14:27:32.006+0000] {standard_task_runner.py:72} INFO - Started process 1697 to run task
[2025-03-12T14:27:32.007+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'load_data_warehouse', 'get_last_updated_date', 'manual__2025-03-12T14:13:58.419334+00:00', '--job-id', '590', '--raw', '--subdir', 'DAGS_FOLDER/load_data_warehouse_dag.py', '--cfg-path', '/tmp/tmptkuhmpbh']
[2025-03-12T14:27:32.010+0000] {standard_task_runner.py:105} INFO - Job 590: Subtask get_last_updated_date
[2025-03-12T14:27:32.071+0000] {task_command.py:467} INFO - Running <TaskInstance: load_data_warehouse.get_last_updated_date manual__2025-03-12T14:13:58.419334+00:00 [running]> on host 70b3b9cfbba0
[2025-03-12T14:27:32.189+0000] {taskinstance.py:3131} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='load_data_warehouse' AIRFLOW_CTX_TASK_ID='get_last_updated_date' AIRFLOW_CTX_EXECUTION_DATE='2025-03-12T14:13:58.419334+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-12T14:13:58.419334+00:00'
[2025-03-12T14:27:32.191+0000] {taskinstance.py:731} INFO - ::endgroup::
[2025-03-12T14:27:32.194+0000] {sql.py:266} INFO - Executing: SELECT last_updated FROM chess_dw.fact_games ORDER DESC LIMIT 1;
[2025-03-12T14:27:32.207+0000] {base.py:84} INFO - Retrieving connection 'azure_chess_dw'
[2025-03-12T14:27:32.218+0000] {base.py:84} INFO - Retrieving connection 'azure_chess_dw'
[2025-03-12T14:27:34.965+0000] {sql.py:509} INFO - Running statement: SELECT last_updated FROM chess_dw.fact_games ORDER DESC LIMIT 1;, parameters: None
[2025-03-12T14:27:35.480+0000] {taskinstance.py:3310} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 272, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "DESC"
LINE 1: ...ELECT last_updated FROM chess_dw.fact_games ORDER DESC LIMIT...
                                                             ^

[2025-03-12T14:27:35.513+0000] {taskinstance.py:1225} INFO - Marking task as FAILED. dag_id=load_data_warehouse, task_id=get_last_updated_date, run_id=manual__2025-03-12T14:13:58.419334+00:00, execution_date=20250312T141358, start_date=20250312T142731, end_date=20250312T142735
[2025-03-12T14:27:35.563+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2025-03-12T14:27:35.565+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 590 for task get_last_updated_date (syntax error at or near "DESC"
LINE 1: ...ELECT last_updated FROM chess_dw.fact_games ORDER DESC LIMIT...
                                                             ^
; 1697)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 115, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3004, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3158, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3182, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 272, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "DESC"
LINE 1: ...ELECT last_updated FROM chess_dw.fact_games ORDER DESC LIMIT...
                                                             ^

[2025-03-12T14:27:35.604+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2025-03-12T14:27:35.633+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1378: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2025-03-12T14:27:35.682+0000] {taskinstance.py:3900} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-03-12T14:27:35.699+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
